started adding php classes for users

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -40,13 +40,13 @@
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-                    <a class="navbar-brand" href="index.html"> <img src="images/logo.jpg" alt="logo"></a> </div>
+                    <a class="navbar-brand" href="index.html"> <img src="images/logo.png" alt="logo"></a> </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse navbar-ex1-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li class="active"><a href="index.html">HOME</a></li>
-                        <li class="hidden-sm"><a href="features.html">FEATURES</a></li>
+                        <li class="hidden-sm"><a href="features.html">FEATURES</a>                        </li>
                         <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown">PRICING <b class="caret"></b></a>
                             <ul class="dropdown-menu">
                                 <li><b>-------Web Hosting-------</b></li>
@@ -61,24 +61,25 @@
                                 <li><a href="">Data Storage</a></li>
                                 <li><a href="">Licenses</a></li>
                                 <br>
-                                <li><b>-------Cloud--------------</b></li>
+                                <li><b>-------Cloud-----------------</b></li>
                                 <li><a href="">VPS</a></li>
                                 <li><a href="">Database</a></li>
                             </ul>
                         </li>
                         <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown">CONTROL PANELS <b class="caret"></b></a>
                             <ul class="dropdown-menu">
+                                <li><b>-------Web Control-----------</b></li>
                                 <li><a href="https://xenohost.co.uk/cpanel">Website cPanel</a></li>
                                 <li><a href="https://xenohost.co.uk/webmail">Webmail</a></li>
                                 <li><a href="https://xenohost.co.uk/billing">Billing</a></li>
-                                <li>-----------------------------------</li>
+                                <li><b>-------Gaming Control-------</b></li>
                                 <li><a href="https://xenohost.co.uk/multicraft">XenoPanel{Minecraft}</a></li>
                                 <li><a href="https://xenohost.co.uk/tcadmin">TCAdmin</a></li>
                             </ul>
                         </li>
                         <li><a href="contact.html">CONTACT</a></li>
-                        <li><a href="#" role="button" data-toggle="modal" data-target="#Login">Login</a></li>
-                        <li><a href="whmcs/register.php" role="button" class="btn btn-success">Sign Up</a></li>
+                        <li><a href="" role="button" data-toggle="modal" data-target="#Login">Login</a></li>
+                        <li><a href="client/register.php" role="button" class="btn btn-success">Sign Up</a></li>
                     </ul>
                 </div>   
             </div>
@@ -232,6 +233,7 @@
                             <li><a href="tos.html">Terms of service</a></li>
                             <li><a href="tou.html">Terms of use</a></li>
                             <li><a href="privacy.html">Privacy Policy</a></li>
+                            <li><a href="refunds.html">Refund Policy</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-4 col-md-2">
@@ -242,13 +244,13 @@
                     </div>
                 </div>
                 <div class="row copyright">
-                    <div class="pull-right"><img src="images/logo-small.jpg" alt="logo"></div>
+                    <div class="pull-right"><img src="images/logosmall.png" alt="logo"></div>
                     <center><a href="https://www.xenohost.co.uk/">© Copyright 2016-2019 XenoHost</a>
                         <a class="pipe"> | </a><a href="https://www.xenohost.co.uk/tac.html/" title="Terms &amp; conditions ">Terms &amp; conditions </a>
-                        <a class="pipe"> | </a><a href="https://www.xenohost.co.uk/contracts.html/" title="Contracts">Contracts</a>
-                        <a class="pipe"> | </a><a href="https://www.xenohost.co.uk/privacy.html/" title="Privacy">Privacy</a>
-                        <a class="pipe"> | </a><a href="https://www.xenohost.co.uk/payment.xml" title="Xenohost payment methods ">Payments</a>
-                        <a class="pipe"> | </a><a href="https://www.xenohost.co.uk/support/" title="Contact OVH">Support</a></center>
+                        <a class="pipe"> | </a><a href="contracts.html" title="Contracts">Contracts</a>
+                        <a class="pipe"> | </a><a href="privacy.html" title="Privacy">Privacy</a>
+                        <a class="pipe"> | </a><a href="payment.xml" title="Xenohost payment methods ">Payments</a>
+                        <a class="pipe"> | </a><a href="support" title="Contact OVH">Support</a></center>
                 </div>
 
                 <center>In accordance with the 2006/112/CE Directive, modified on 01/01/2015, prices incl. VAT may vary according to the customer's country of residence 
@@ -257,7 +259,7 @@
         </div>
     </div
 
-    <!--==============MODAL LOGIN=================--> 
+    ><!--==============MODAL LOGIN=================--> 
 
     <!-- Modal -->
     <div class="modal fade LoginSignup" id="Login" tabindex="-1" role="dialog" aria-labelledby="LoginLabel" aria-hidden="true">
