--- a/public_html/index.html
+++ b/public_html/index.html
@@ -269,9 +269,9 @@
                     <h3 class="modal-title">Login</h3>
                 </div>
                 <div class="modal-body">
-                    <form method="post" action="https://www.xenohost.co.uk/deancollege/GUNew/billing/login.php">
+                    <form method="post" action="https://comp-server.uhi.ac.uk/~10004084/billing/login.php">
                         <div class="form-group">
-                            <input class="form-control input-lg" type="text" name="name" size="50" placeholder="Email ID"/>
+                            <input class="form-control input-lg" type="text" name="name" size="50" placeholder="Username"/>
                         </div>
                         <div class="form-group">
                             <input class="form-control input-lg" type="password" name="password" size="20" placeholder="Password"/>
