--- a/public_html/features.html
+++ b/public_html/features.html
@@ -142,6 +142,7 @@
 <!--Container Closed--> 
 
         <!--============== Footer ==============-->
+        <!--============== Footer ==============-->
 
         <div class="footer">
             <div class="container">
@@ -206,8 +207,6 @@
                     (by default, the prices displayed are inclusive of the UK VAT in force).</center>
             </div>
         </div>
-    </div>
-
 <!--==============MODAL LOGIN=================--> 
 
 <!-- Modal -->
@@ -219,7 +218,7 @@
         <h3 class="modal-title">Login</h3>
       </div>
       <div class="modal-body">
-        <form method="post" action="https://www.yourwebsite.com/client/dologin.php">
+        <form method="post" action="https://comp-server.uhi.ac.uk/~10004084/billing/login.php">
           <div class="form-group">
             <input class="form-control input-lg" type="text" name="username" size="50" placeholder="Email ID"/>
           </div>
