--- a/public_html/privacy.html
+++ b/public_html/privacy.html
@@ -6,27 +6,26 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- Bootstrap -->
 <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-
 <!--==============GOOGLE FONT - OPEN SANS=================-->
 <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
 <!--==============MAIN CSS FOR COMING SOON PAGE=================-->
 
-<link href="assets/css/hosting.css" rel="stylesheet">
+<link href="assets/css/hosting.css" rel="stylesheet" media="all">
 
-<!--==============Mordernizr =================--> 
+<!--==============Mordernizr =================-->
 
-<script src="assets/js/modernizr.js"></script> 
+<script src="assets/js/modernizr.js"></script>
 
-<!--==============JQuery=================-->
+<!--===================JQUERY STARTS=======================-->
 
 <script src="assets/js/jquery-1.9.0.min.js"></script>
 
+<!--===================JQUERY ENDS=======================-->
+
 </head>
 <body>
-<!--==============Logo & Menu Bar=================-->
 
- <!--==============Logo & Menu Bar=================-->
         <nav class="navbar navbar-default navbar-fixed-top" role="navigation"> 
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="container">
@@ -76,79 +75,50 @@
                 </div>   
             </div>
         </nav>
-
 <!--==============Content Area=================-->
 
 <div class="container"> 
   
-  <!--============== Blog ==============-->
+  <!--============== Features Layout ==============-->
   
-  <div class="row PageHead">
+<center>  <div class="row FeatLayout">
+      <h1>Terms of Use</h1>
+      <p class="lead">blahbblahdwajdhwaudhwaduhwaduihwadwad.</p>
+      <p>
 
-    <div class="col-md-12">
-      <h1>Our Blog</h1>
-      <h3>Latest news and updates from flathost</h3>
+Revision date: 08 May 2019	<br>
+<br>
+blahbblahdwajdhwaudhwaduhwaduihwadwad<br>
+<br>
+<b>Examples of unacceptable content or links:</b>
+<br>
+blahbblahdwajdhwaudhwaduhwaduihwadwad
+<br>
+blahbblahdwajdhwaudhwaduhwaduihwadwad
+<br>
+<b><br>blahbblahdwajdhwaudhwaduhwaduihwadwad</b></br>
+blahbblahdwajdhwaudhwaduhwaduihwadwad
+<br>
+<br>
+blahbblahdwajdhwaudhwaduhwaduihwadwad<br>
+<br>
+<b>Examples of unacceptable content or links:</b>
+<br>
+blahbblahdwajdhwaudhwaduhwaduihwadwad
+<br>
+blahbblahdwajdhwaudhwaduhwaduihwadwad
+<br>
+<b><br>blahbblahdwajdhwaudhwaduhwaduihwadwad</b></br>
+blahbblahdwajdhwaudhwaduhwaduihwadwad
     </div>
-  </div>
-  <div class="row blog">
-    <div class="col-md-9">
-      <div class="blogpost">
-        <h1 class="title">Flathost Offers Dedicated Hosting</h1>
-        <h3 class="subtitle">Posted by <a href="#">Surjith SM</a> on 17 Jul 2013. <a href="#">16 comments</a></h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget turpis pulvinar, tempor odio sed, adipiscing dolor. Donec nisi velit, malesuada id dolor non, elementum auctor arcu. Cras consectetur sapien et purus posuere, ac hendrerit nunc luctus. Etiam adipiscing et sapien a accumsan. Integer gravida vestibulum eros at elementum. Maecenas a velit hendrerit, tristique tortor lacinia, vehicula sapien. Cras cursus sodales posuere. Sed viverra mi mauris, at dapibus orci varius non.</p>
-        <p><a href="#Signup" role="button" data-toggle="modal" class="btn btn-success">READ MORE</a></p>
-      </div>
-      <div class="blogpost">
-        <h1 class="title">Managed Hosting vs Dedicated Hosting</h1>
-        <h3 class="subtitle">Posted by <a href="#">Surjith SM</a> on 17 Jul 2013. <a href="#">16 comments</a></h3>
-        <img src="assets/images/blog-img1.png" alt="blog img">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget turpis pulvinar, tempor odio sed, adipiscing dolor. Donec nisi velit, malesuada id dolor non, elementum auctor arcu. Cras consectetur sapien et purus posuere, ac hendrerit nunc luctus. Etiam adipiscing et sapien a accumsan. Integer gravida vestibulum eros at elementum. Maecenas a velit hendrerit, tristique tortor lacinia, vehicula sapien. Cras cursus sodales posuere. Sed viverra mi mauris, at dapibus orci varius non.</p>
-        <p><a href="#Signup" role="button" data-toggle="modal" class="btn btn-success">READ MORE</a></p>
-      </div>
-      <div class="blogpost">
-        <h1 class="title">5 Pitfalls of Domain Registration</h1>
-        <h3 class="subtitle">Posted by <a href="#">Surjith SM</a> on 17 Jul 2013. <a href="#">16 comments</a></h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget turpis pulvinar, tempor odio sed, adipiscing dolor. Donec nisi velit, malesuada id dolor non, elementum auctor arcu. Cras consectetur sapien et purus posuere, ac hendrerit nunc luctus. Etiam adipiscing et sapien a accumsan. Integer gravida vestibulum eros at elementum. Maecenas a velit hendrerit, tristique tortor lacinia, vehicula sapien. Cras cursus sodales posuere. Sed viverra mi mauris, at dapibus orci varius non.</p>
-        <p><a href="#Signup" role="button" data-toggle="modal" class="btn btn-success">READ MORE</a></p>
-      </div>
-    </div>
-    <div class="col-md-3 sidebar">
-      <h3>Categories</h3>
-      <ul class="bloglist">
-        <li>Dedicated Servers</li>
-        <li>Managed Hosting</li>
-        <li>News and Updates</li>
-        <li>New Features</li>
-        <li>Domian Registration</li>
-        <li>Server Locations</li>
-      </ul>
-      <br>
-      <h3>Text Widget</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget turpis pulvinar, tempor odio sed, adipiscing dolor. <br>
-        <br>
-        Donec nisi velit, malesuada id dolor non, elementum auctor arcu. Cras consectetur sapien et purus posuere, ac hendrerit.</p>
-      <br>
-      <h3>Archieves</h3>
-      <ul class="bloglist">
-        <li>May 2013</li>
-        <li>April 2013</li>
-        <li>March 2013</li>
-        <li>February 2013</li>
-        <li>January 2013</li>
-        <li>December 2012</li>
-        <li>November 2012</li>
-        <li>October 2012</li>
-        <li>September 2012</li>
-        <li>August 2012</li>
-      </ul>
-    </div>
-  </div>
-  <!--Blog Closed--> 
+  </div> </center>
   
-</div>
+  <!--============== Other Features ==============-->
+  
+  
 <!--Container Closed--> 
 
-        <!--============== Footer ==============-->
+<!--============== Footer ==============-->
         <!--============== Footer ==============-->
 
         <div class="footer">
@@ -214,7 +184,7 @@
                     (by default, the prices displayed are inclusive of the UK VAT in force).</center>
             </div>
         </div>
-<!--==============MODAL LOGIN=================-->
+<!--==============MODAL LOGIN=================--> 
 
 <!-- Modal -->
 <div class="modal fade LoginSignup" id="Login" tabindex="-1" role="dialog" aria-labelledby="LoginLabel" aria-hidden="true">
@@ -244,11 +214,8 @@
 </div>
 <!-- /.modal --> 
 
-
-
-
 <!--==============BOOTSTRAP JS=================--> 
 
-<script src="assets/js/bootstrap.min.js"></script> 
+<script src="assets/js/bootstrap.min.js"></script>
 </body>
 </html>
