--- a/public_html/pricing.html
+++ b/public_html/pricing.html
@@ -415,7 +415,7 @@
                         <h3 class="modal-title">Login</h3>
                     </div>
                     <div class="modal-body">
-                        <form method="post" action="https://www.yourwebsite.com/client/dologin.php">
+                        <form method="post" action="https://comp-server.uhi.ac.uk/~10004084/billing/login.php">
                             <div class="form-group">
                                 <input class="form-control input-lg" type="text" name="username" size="50" placeholder="Email ID"/>
                             </div>
