--- a/public_html/testimonials.html
+++ b/public_html/testimonials.html
@@ -29,38 +29,55 @@
 
 <!--==============Logo & Menu Bar=================-->
 
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation"> 
-  <!-- Brand and toggle get grouped for better mobile display -->
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-      <a class="navbar-brand" href="index.html"> <img src="assets/images/flathost-logo.png" alt="logo"></a> </div>
-    
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse navbar-ex1-collapse">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="index.html">HOME</a></li>
-        <li class="hidden-sm"><a href="features.html">FEATURES</a></li>
-        <li class="active hidden-sm"><a href="testimonials.html">PARTNERS</a></li>
-        <li><a href="pricing.html">PRICING</a></li>
-        <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown">CLIENT PANELS <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="blog.html">Blog List</a></li>
-            <li><a href="blog-post.html">Single Blog page</a></li>
-          </ul>
-        </li>
-        <li><a href="contact.html">CONTACT</a></li>
-        <li><a href="#" role="button" data-toggle="modal" data-target="#Login">Login</a></li>
-        <li><a href="whmcs/register.php" role="button" class="btn btn-success">Sign Up</a></li>
-      </ul>
-      </li>
-      </ul>
-    </div>
-    <!-- /.navbar-collapse --> 
-    
-  </div>
-</nav>
+        <nav class="navbar navbar-default navbar-fixed-top" role="navigation"> 
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
+                    <a class="navbar-brand" href="index.html"> <img src="assets/images/logo.png" alt="logo"></a> </div>
 
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse navbar-ex1-collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="active"><a href="index.html">HOME</a></li>
+                        <li class="hidden-sm"><a href="features.html">FEATURES</a>                        </li>
+                        <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown">PRICING <b class="caret"></b></a>
+                            <ul class="dropdown-menu">
+                                <li><b>-------Web Hosting-------</b></li>
+                                <li><a href="">Shared Hosting</a></li>
+                                <li><a href="">Reseller Hosting</a></li>
+                                <li><a href="">E-Mail Solutions</a></li>
+                                <li><a href="">Office 365</a></li>
+                                <li><a href="">SSL Gateway / CDN</a></li>
+                                <br>
+                                <li><b>-------Dedicated-----------</b></li>
+                                <li><a href="">Dedicated Servers</a></li>
+                                <li><a href="">Data Storage</a></li>
+                                <li><a href="">Licenses</a></li>
+                                <br>
+                                <li><b>-------Cloud-----------------</b></li>
+                                <li><a href="">VPS</a></li>
+                                <li><a href="">Database</a></li>
+                            </ul>
+                        </li>
+                        <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown">CONTROL PANELS <b class="caret"></b></a>
+                            <ul class="dropdown-menu">
+                                <li><b>-------Web Control-----------</b></li>
+                                <li><a href="https://xenohost.co.uk/cpanel">Website cPanel</a></li>
+                                <li><a href="https://xenohost.co.uk/webmail">Webmail</a></li>
+                                <li><a href="https://xenohost.co.uk/billing">Billing</a></li>
+                                <li><b>-------Gaming Control-------</b></li>
+                                <li><a href="https://xenohost.co.uk/multicraft">XenoPanel{Minecraft}</a></li>
+                                <li><a href="https://xenohost.co.uk/tcadmin">TCAdmin</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="contact.html">CONTACT</a></li>
+                        <li><a href="" role="button" data-toggle="modal" data-target="#Login">Login</a></li>
+                        <li><a href="client/register.php" role="button" class="btn btn-success">Sign Up</a></li>
+                    </ul>
+                </div>   
+            </div>
+        </nav>
 <!--==============Content Area=================-->
 
 <div class="container"> 
@@ -76,8 +93,8 @@
     <div class="col-sm-6 col-md-4 tm-data">
       <div class="img-thumbnail"> <img src="assets/images/client1.jpg" alt="client">
         <div class="caption">
-          <p>Flathost servers are having high physical security and power redundancy Your data will be secure with us.</p>
-          <h5>James, Envato</h5>
+          <p>XenoHost servers are having high physical security and power redundancy Your data will be secure with us.</p>
+          <h5>Some Name</h5>
         </div>
       </div>
     </div>
@@ -85,7 +102,7 @@
       <div class="img-thumbnail"> <img src="assets/images/client2.jpg" alt="client">
         <div class="caption">
           <p>With our ultra mordern servers and optical cables, your data will be transfered to end user in milliseconds.</p>
-          <h5>Mariya, Activeden</h5>
+          <h5>Some Name</h5>
         </div>
       </div>
     </div>
@@ -93,7 +110,7 @@
       <div class="img-thumbnail"> <img src="assets/images/client3.jpg" alt="client">
         <div class="caption">
           <p>We have a dedicated team of support for sales and support to help you in anytime. You can also chat with us.</p>
-          <h5>Steven, Microlancer</h5>
+          <h5>Some Name</h5>
         </div>
       </div>
     </div>
@@ -106,60 +123,71 @@
 <!--Container Closed--> 
 
 <!--============== Footer ==============-->
+        <!--============== Footer ==============-->
 
-<div class="footer">
-  <div class="container">
-    <div class="row footerlinks">
-      <div class="col-sm-4 col-md-2">
-        <p>CALL US</p>
-        <ul>
-          <li> +1 4528 254 247</li>
-          <li>+1 4002 188 355</li>
-        </ul>
-      </div>
-      <div class="col-sm-4 col-md-2">
-        <p>FOLLOW US</p>
-        <ul>
-          <li><a href="http://twitter.com/surjithctly" target="_blank">Follow on Twitter</a></li>
-          <li><a href="http://web3canvas.com" target="_blank">Like us on Facebook</a></li>
-          <li><a href="http://surjithctly.in" target="_blank">Join on Linkedin</a> </li>
-        </ul>
-      </div>
-      <div class="col-sm-4 col-md-2">
-        <p>COMPANY</p>
-        <ul>
-          <li> <a href="#">About us</a></li>
-          <li><a href="#">Latest from Blog</a></li>
-          <li><a href="#">Our Team</a></li>
-        </ul>
-      </div>
-      <div class="col-sm-4 col-md-2">
-        <p>EMAIL US</p>
-        <ul>
-          <li><a href="mailto:support@mail.in" target="_blank">support@mail.com</a></li>
-          <li><a href="mailto:mail@mail.in" target="_blank">sales@mail.com</a></li>
-        </ul>
-      </div>
-      <div class="col-sm-4 col-md-2">
-        <p>LEGAL TERMS</p>
-        <ul>
-          <li><a href="#">Terms of use</a></li>
-          <li><a href="#">Privacy Policy</a></li>
-        </ul>
-      </div>
-      <div class="col-sm-4 col-md-2">
-        <p>Live Chat</p>
-        <ul>
-          <li> <a href="#" class="btn btn-success btn-small">CHAT WITH US </a> </li>
-        </ul>
-      </div>
-    </div>
-    <div class="row copyright">
-      <div class="pull-right"><img src="assets/images/logo-footer.png" alt="logo"></div>
-      <p>Copyright &copy; 2013. Flathost Inc</p>
-    </div>
-  </div>
-</div>
+        <div class="footer">
+            <div class="container">
+                <div class="row footerlinks">
+                    <div class="col-sm-4 col-md-2">
+                        <p>CALL US</p>
+                        <ul>
+                            <li> +44 1111 111 111</li>
+                            <li> +44 1111 111 111</li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-4 col-md-2">
+                        <p>FOLLOW US</p>
+                        <ul>
+                            <li><a href="" target="_blank">Follow on Twitter</a></li>
+                            <li><a href="" target="_blank">Like us on Facebook</a></li>
+                            <li><a href="" target="_blank">Join on Linkedin</a> </li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-4 col-md-2">
+                        <p>COMPANY</p>
+                        <ul>
+                            <li> <a href="#">About us</a></li>
+                            <li><a href="#">Latest News</a></li>
+                            <li><a href="#">Our Team</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-4 col-md-2">
+                        <p>EMAIL US</p>
+                        <ul>
+                            <li><a href="mailto:support@mail.in" target="_blank">support@xenohost.co.uk</a></li>
+                            <li><a href="mailto:mail@mail.in" target="_blank">sales@xenohost.co.uk</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-4 col-md-2">
+                        <p>LEGAL TERMS</p>
+                        <ul>
+                            <li><a href="tos.html">Terms of service</a></li>
+                            <li><a href="tou.html">Terms of use</a></li>
+                            <li><a href="privacy.html">Privacy Policy</a></li>
+                            <li><a href="refunds.html">Refund Policy</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-4 col-md-2">
+                        <p>Live Chat</p>
+                        <ul>
+                            <li> <a href="#" class="btn btn-success btn-small">CHAT WITH US </a> </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row copyright">
+                    <div class="pull-right"><img src="assets/images/logosmall.png" alt="logo"></div>
+                    <center><a href="https://www.xenohost.co.uk/">© Copyright 2016-2019 XenoHost</a>
+                        <a class="pipe"> | </a><a href="https://www.xenohost.co.uk/tac.html/" title="Terms &amp; conditions ">Terms &amp; conditions </a>
+                        <a class="pipe"> | </a><a href="contracts.html" title="Contracts">Contracts</a>
+                        <a class="pipe"> | </a><a href="privacy.html" title="Privacy">Privacy</a>
+                        <a class="pipe"> | </a><a href="payment.xml" title="Xenohost payment methods ">Payments</a>
+                        <a class="pipe"> | </a><a href="support" title="Contact OVH">Support</a></center>
+                </div>
+
+                <center>In accordance with the 2006/112/CE Directive, modified on 01/01/2015, prices incl. VAT may vary according to the customer's country of residence 
+                    (by default, the prices displayed are inclusive of the UK VAT in force).</center>
+            </div>
+        </div>
 
 <!--==============MODAL LOGIN=================--> 
 
@@ -172,7 +200,7 @@
         <h3 class="modal-title">Login</h3>
       </div>
       <div class="modal-body">
-        <form method="post" action="https://www.yourwebsite.com/client/dologin.php">
+        <form method="post" action="https://comp-server.uhi.ac.uk/~10004084/billing/login.php">
           <div class="form-group">
             <input class="form-control input-lg" type="text" name="username" size="50" placeholder="Email ID"/>
           </div>
