--- a/public_html/tos.html
+++ b/public_html/tos.html
@@ -27,31 +27,55 @@
 <body>
 
 <!--==============Logo & Menu Bar=================-->
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation"> 
-  <!-- Brand and toggle get grouped for better mobile display -->
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-      <a class="navbar-brand" href="index.html"> <img src="assets/images/logo.png" alt="logo"></a> </div>
-    
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse navbar-ex1-collapse">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="http://xenohost.co.uk">HOME</a></li>
-        <li><a href="http://xenohost.co.uk">FEATURES</a></li>
-        <li><a href="http://xenohost.co.uk">PRICING</a></li>
-        <li><a href="http://xenohost.co.uk">CONTACT</a></li>
-        <li><a href="http://xenohost.co.uk/multicraft/index.php?r=site/page&view=home">MULTICRAFT</a></li>
-        <li><a href="#" role="button" data-toggle="modal" data-target="#Login">Login</a></li>
-        <li><a href="http://billing.xenohost.co.uk/register.php" role="button" class="btn btn-success">Sign Up</a></li>
-      </ul>
-      </li>
-      </ul>
-    </div>
-    <!-- /.navbar-collapse --> 
-    
-  </div>
-</nav>
+        <nav class="navbar navbar-default navbar-fixed-top" role="navigation"> 
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
+                    <a class="navbar-brand" href="index.html"> <img src="assets/images/logo.png" alt="logo"></a> </div>
+
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse navbar-ex1-collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="active"><a href="index.html">HOME</a></li>
+                        <li class="hidden-sm"><a href="features.html">FEATURES</a>                        </li>
+                        <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown">PRICING <b class="caret"></b></a>
+                            <ul class="dropdown-menu">
+                                <li><b>-------Web Hosting-------</b></li>
+                                <li><a href="">Shared Hosting</a></li>
+                                <li><a href="">Reseller Hosting</a></li>
+                                <li><a href="">E-Mail Solutions</a></li>
+                                <li><a href="">Office 365</a></li>
+                                <li><a href="">SSL Gateway / CDN</a></li>
+                                <br>
+                                <li><b>-------Dedicated-----------</b></li>
+                                <li><a href="">Dedicated Servers</a></li>
+                                <li><a href="">Data Storage</a></li>
+                                <li><a href="">Licenses</a></li>
+                                <br>
+                                <li><b>-------Cloud-----------------</b></li>
+                                <li><a href="">VPS</a></li>
+                                <li><a href="">Database</a></li>
+                            </ul>
+                        </li>
+                        <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown">CONTROL PANELS <b class="caret"></b></a>
+                            <ul class="dropdown-menu">
+                                <li><b>-------Web Control-----------</b></li>
+                                <li><a href="https://xenohost.co.uk/cpanel">Website cPanel</a></li>
+                                <li><a href="https://xenohost.co.uk/webmail">Webmail</a></li>
+                                <li><a href="https://xenohost.co.uk/billing">Billing</a></li>
+                                <li><b>-------Gaming Control-------</b></li>
+                                <li><a href="https://xenohost.co.uk/multicraft">XenoPanel{Minecraft}</a></li>
+                                <li><a href="https://xenohost.co.uk/tcadmin">TCAdmin</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="contact.html">CONTACT</a></li>
+                        <li><a href="" role="button" data-toggle="modal" data-target="#Login">Login</a></li>
+                        <li><a href="client/register.php" role="button" class="btn btn-success">Sign Up</a></li>
+                    </ul>
+                </div>   
+            </div>
+        </nav>
 
 <!--==============Content Area=================-->
 
@@ -111,59 +135,71 @@ Although XenoHost has an excellent record for reliability, we do not offer an up
 
 <!--============== Footer ==============-->
 
-<div class="footer">
-  <div class="container">
-    <div class="row footerlinks">
-      <div class="col-sm-4 col-md-2">
-<!--        <p>CALL US</p>
-        <ul>
-          <li> +1 4528 254 247</li>
-          <li>+1 4002 188 355</li>
-        </ul>
-      </div>
-      <div class="col-sm-4 col-md-2">
-        <p>FOLLOW US</p>
-        <ul>
-          <li><a href="http://twitter.com/surjithctly" target="_blank">Follow on Twitter</a></li>
-          <li><a href="http://web3canvas.com" target="_blank">Like us on Facebook</a></li>
-          <li><a href="http://surjithctly.in" target="_blank">Join on Linkedin</a> </li>
-        </ul>
-      </div>
-      <div class="col-sm-4 col-md-2">
-        <p>COMPANY</p>
-        <ul>
-          <li> <a href="#">About us</a></li>
-          <li><a href="#">Latest from Blog</a></li>
-          <li><a href="#">Our Team</a></li>
-        </ul> -->
-      </div>
-      <div class="col-sm-4 col-md-2">
-        <p>EMAIL US</p>
-        <ul>
-          <li><a href="mailto:curtis@voxelloop.co.uk" target="_blank">curtis@voxelloop.co.uk</a></li>
-<!--          <li><a href="mailto:mail@mail.in" target="_blank">sales@mail.com</a></li> -->
-        </ul>
-      </div>
-      <div class="col-sm-4 col-md-2">
-        <p>LEGAL TERMS</p>
-        <ul>
-          <li class="active"><a href="http://xenohost.co.uk/tos.html">Terms of use</a></li>
-          <li><a href="http://xenohost.co.uk/refunds.html">Refunds Policy</a></li>
-        </ul>
-      </div>
-      <div class="col-sm-4 col-md-2">
- <!--       <p>Live Chat</p>
-        <ul>
-          <li> <a href="http://xenohost.co.uk/refunds.html" class="btn btn-success btn-small">CHAT WITH US </a> </li>
-        </ul> -->
-      </div>
-    </div>
-    <div class="row copyright">
-<!--      <div class="pull-right"><img src="assets/images/logo-footer.png" alt="logo"></div> -->
-      <p>Copyright &copy; 2015. XenoHost</p>
-    </div>
-  </div>
-</div>
+        <!--============== Footer ==============-->
+
+        <div class="footer">
+            <div class="container">
+                <div class="row footerlinks">
+                    <div class="col-sm-4 col-md-2">
+                        <p>CALL US</p>
+                        <ul>
+                            <li> +44 1111 111 111</li>
+                            <li> +44 1111 111 111</li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-4 col-md-2">
+                        <p>FOLLOW US</p>
+                        <ul>
+                            <li><a href="" target="_blank">Follow on Twitter</a></li>
+                            <li><a href="" target="_blank">Like us on Facebook</a></li>
+                            <li><a href="" target="_blank">Join on Linkedin</a> </li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-4 col-md-2">
+                        <p>COMPANY</p>
+                        <ul>
+                            <li> <a href="#">About us</a></li>
+                            <li><a href="#">Latest News</a></li>
+                            <li><a href="#">Our Team</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-4 col-md-2">
+                        <p>EMAIL US</p>
+                        <ul>
+                            <li><a href="mailto:support@mail.in" target="_blank">support@xenohost.co.uk</a></li>
+                            <li><a href="mailto:mail@mail.in" target="_blank">sales@xenohost.co.uk</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-4 col-md-2">
+                        <p>LEGAL TERMS</p>
+                        <ul>
+                            <li><a href="tos.html">Terms of service</a></li>
+                            <li><a href="tou.html">Terms of use</a></li>
+                            <li><a href="privacy.html">Privacy Policy</a></li>
+                            <li><a href="refunds.html">Refund Policy</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-4 col-md-2">
+                        <p>Live Chat</p>
+                        <ul>
+                            <li> <a href="#" class="btn btn-success btn-small">CHAT WITH US </a> </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row copyright">
+                    <div class="pull-right"><img src="assets/images/logosmall.png" alt="logo"></div>
+                    <center><a href="https://www.xenohost.co.uk/">© Copyright 2016-2019 XenoHost</a>
+                        <a class="pipe"> | </a><a href="https://www.xenohost.co.uk/tac.html/" title="Terms &amp; conditions ">Terms &amp; conditions </a>
+                        <a class="pipe"> | </a><a href="contracts.html" title="Contracts">Contracts</a>
+                        <a class="pipe"> | </a><a href="privacy.html" title="Privacy">Privacy</a>
+                        <a class="pipe"> | </a><a href="payment.xml" title="Xenohost payment methods ">Payments</a>
+                        <a class="pipe"> | </a><a href="support" title="Contact OVH">Support</a></center>
+                </div>
+
+                <center>In accordance with the 2006/112/CE Directive, modified on 01/01/2015, prices incl. VAT may vary according to the customer's country of residence 
+                    (by default, the prices displayed are inclusive of the UK VAT in force).</center>
+            </div>
+        </div>
 
 <!--==============MODAL LOGIN=================--> 
 
@@ -176,7 +212,7 @@ Although XenoHost has an excellent record for reliability, we do not offer an up
         <h3 class="modal-title">Login</h3>
       </div>
       <div class="modal-body">
-        <form method="post" action="http://billing.xenohost.co.uk/dologin.php">
+        <form method="post" action="https://comp-server.uhi.ac.uk/~10004084/billing/login.php">
           <div class="form-group">
             <input class="form-control input-lg" type="text" name="username" size="50" placeholder="Email ID"/>
           </div>
